...
            super.prepare(for: segue, sender: sender)
        }
    }
    
    private func configureBackButton() {
        navigationController?.navigationBar.backIndicatorImage = UIImage(
            named: "Backward"
        )
        navigationController?.navigationBar.backIndicatorTransitionMaskImage =
        UIImage(named: "Backward")
        navigationItem.backBarButtonItem = UIBarButtonItem(
            title: "",
            style: .plain,
...
